--- a/app/src/main/res/layout/activity_data_entry.xml
+++ b/app/src/main/res/layout/activity_data_entry.xml
@@ -70,6 +70,13 @@
                         android:inputType="number" />
 
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/heightError_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:gravity="end"
+                    tools:visibility="visible"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -93,6 +100,14 @@
                         android:inputType="number" />
 
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/weightError_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:gravity="end"
+                    tools:visibility="visible"/>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -123,6 +138,14 @@
                         android:hint="Bp"
                         android:inputType="number" />
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/pbError_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:gravity="end"
+                    tools:visibility="visible"/>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -146,6 +169,14 @@
                         android:inputType="number" />
 
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/tempError_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:gravity="end"
+                    tools:visibility="visible"/>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -168,6 +199,14 @@
                         android:hint="Pulse in .."
                         android:inputType="number" />
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/pulseError_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:gravity="end"
+                    tools:visibility="visible"/>
+
             </LinearLayout>
 
             <Button
