--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="splashBackground">#FFFFFF</color>
+    <color name="darkGreen">#689739</color>
+    <color name="lightGreen">#8bc24c</color>
+    <color name="yellow">#ffeb3c</color>
 </resources>
