--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/darkGreen"
     tools:context=".view.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -74,6 +75,7 @@
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="50dp"
             android:text="@string/login"
+            android:background="@drawable/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_password_et" />
