--- a/app/src/main/res/layout/activity_fetch.xml
+++ b/app/src/main/res/layout/activity_fetch.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkGreen"
     tools:context=".view.FetchActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,6 +23,7 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="100dp"
             android:padding="10dp"
+            android:textColor="@android:color/white"
             android:text="@string/uhid"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -35,22 +37,22 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="25dp"
             android:hint="@string/uhid_hint"
-            android:inputType="number"
+            android:textColorHint="@android:color/white"
+            android:inputType="textPhonetic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <Button
             android:id="@+id/fetch_details_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="161dp"
+            android:layout_marginHorizontal="15dp"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="162dp"
             android:text="@string/fetch_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/student_uhid_ed" />
+            android:background="@drawable/button"
+            app:layout_constraintTop_toBottomOf="@+id/student_uhid_ed"
+            tools:layout_editor_absoluteX="161dp" />
 
         <ProgressBar
             android:id="@+id/fetch_progressbar"
