--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkGreen"
     tools:context=".view.ResultActivity">
 
     <TextView
@@ -23,6 +24,7 @@
         android:layout_marginStart="161dp"
         android:layout_marginTop="124dp"
         android:text="Next"
+        android:background="@drawable/button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/result_tv" />
 
@@ -34,6 +36,7 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="162dp"
         android:text="Log Out"
+        android:background="@drawable/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/next_btn" />
